# evox

./: .clang-format  CMakeLists.txt  LICENSE  evox.cpp  evox.h  evox.hpp  ideas.txt  library.json  test.cpp  tester.cpp
single_file/: evox_single.hpp
tools/: make_single_header.py
