cmake_minimum_required(VERSION 3.15.0)

project(evox LANGUAGES CXX)
add_executable(tester tester.cpp evox.cpp)

enable_testing()
add_test(NAME TestMismatchedParentheses COMMAND tester "(2+3)*4)")
add_test(NAME TestMismatchedParentheses2 COMMAND tester "((2+3)*4")
add_test(NAME TestOrderOfOperations COMMAND tester "2+3*4")
add_test(NAME TestOrderOfOperations2 COMMAND tester "2*3+4")
add_test(NAME TestDecimalWithoutTrailingZeros COMMAND tester "0.5*2")
add_test(NAME TestDecimalExponents COMMAND tester "2^0.5")
add_test(NAME TestSinFunction COMMAND tester "sin(3.14159/2)")
set_tests_properties(TestMismatchedParentheses PROPERTIES PASS_REGULAR_EXPRESSION "Error: Mismatched parentheses.*")
set_tests_properties(TestMismatchedParentheses2 PROPERTIES PASS_REGULAR_EXPRESSION "Error: Mismatched parentheses.*")
set_tests_properties(TestOrderOfOperations PROPERTIES PASS_REGULAR_EXPRESSION "14")
set_tests_properties(TestOrderOfOperations2 PROPERTIES PASS_REGULAR_EXPRESSION "10")
set_tests_properties(TestDecimalWithoutTrailingZeros PROPERTIES PASS_REGULAR_EXPRESSION "1")
set_tests_properties(TestDecimalExponents PROPERTIES PASS_REGULAR_EXPRESSION "1.41421")
set_tests_properties(   TestSinFunction PROPERTIES PASS_REGULAR_EXPRESSION "1")
